--- a/core/lib/generators/refinery/engine/templates/config/locales/es.yml
+++ b/core/lib/generators/refinery/engine/templates/config/locales/es.yml
@@ -1,7 +1,7 @@
 es:
   refinery:
     plugins:
-      <%= plural_name %>:
+      <%= plugin_name %>:
         title: <%= plural_name.titleize %>
 #        article: masculino/femenino
     <%= namespacing.underscore %>:
