--- a/core/lib/generators/refinery/form/templates/config/locales/en.yml
+++ b/core/lib/generators/refinery/form/templates/config/locales/en.yml
@@ -1,7 +1,7 @@
 en:
   refinery:
     plugins:
-      <%= plural_name %>:
+      <%= plugin_name %>:
         title: <%= plural_name.titleize %>
         description: Provides a contact form and stores <%= plural_name.humanize.downcase %>
     <%= namespacing.underscore %>:
