--- a/core/lib/generators/refinery/form/templates/config/locales/sk.yml
+++ b/core/lib/generators/refinery/form/templates/config/locales/sk.yml
@@ -1,7 +1,7 @@
 sk:
   refinery:
     plugins:
-      <%= plural_name %>:
+      <%= plugin_name %>:
         title: <%= plural_name.titleize %>
         description: Poskytuje kontaktný formulár a zaznamenáva <%= plural_name.humanize.downcase %>
     <%= namespacing.underscore %>:
