--- a/core/lib/generators/refinery/form/templates/config/locales/zh-CN.yml
+++ b/core/lib/generators/refinery/form/templates/config/locales/zh-CN.yml
@@ -1,7 +1,7 @@
 zh-CN:
   refinery:
     plugins:
-      <%= plural_name %>:
+      <%= plugin_name %>:
         title: <%= plural_name.titleize %>
         description: 提供联系方式表格来存放 <%= plural_name.humanize.downcase %>
     <%= namespacing.underscore %>:
